--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edumanage-pro",
-  "homepage": "http://sagar-bhamare.github.io/school-management-system/",
+  "homepage": "https://sagar-bhamare.github.io/school-management-system/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
